# repo-template

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README_zh.md  docker-compose.yml  noxfile.py  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  dependabot.yml  labels.yml  release-drafter-config.yml  release-template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-exe.yml  codecov.yml  codeql-analysis.yml  docker-publish.yml  docs.yml  label-sync.yml  mr-test.yml  python-publish.yml  release.yml  scorecards.yml  semantic-release.yml  stale.yml
docs/: index.md
docs/source/: api.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  usage.rst
examples/: basic_usage.py  cli_example.py  config.json  config_example.py
nox_actions/: docs.py  utils.py
src/your_project_name/: __init__.py  cli.py  config.py
tests/: test_cli.py  test_version.py
